v1.68 - project structure cleanup and added planner